# infotech-test-task

./: .gitignore  CMakeLists.txt
lib/: CMakeLIsts.txt  CMakeLists.txt  magazin.cpp  magazin.hpp  magazine.cpp  magazine.hpp  message.hpp
